--- a/res/layout/audio.xml
+++ b/res/layout/audio.xml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-    <ListView
-            android:id="@+id/listViewAnimals"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:dividerHeight="0.1dp"
-            android:divider="#0000CC"
-            >
-    </ListView>
-
-</LinearLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:padding="10dp"
+          android:textSize="20sp" >
+</TextView>
