--- a/res/layout/image.xml
+++ b/res/layout/image.xml
@@ -5,21 +5,16 @@
               android:layout_height="match_parent">
 
 
-    <Gallery
-            android:id="@+id/gallery1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
 
     <ImageView
-            android:id="@+id/image1"
-            android:layout_width="215dp"
-            android:layout_height="315dp"
+            android:id="@+id/image"
             android:layout_gravity="center_horizontal"
             android:background="#cfcfcf"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:src="@drawable/pic1" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 </LinearLayout>
